--- a/CHANGELOG.html
+++ b/CHANGELOG.html
@@ -88,30 +88,27 @@
 </style>
 
 <div class="container">
-    <h2>📱 Cập nhật phiên bản 2.8.0_txa <span class="badge pulse">MỚI</span></h2>
+    <h2>📱 Cập nhật phiên bản 2.9.0_txa <span class="badge pulse">MỚI</span></h2>
 
     <h3>✨ Có gì mới?</h3>
     <ul>
-        <li><b>Hệ thống Widget Premium:</b> Ra mắt 5 phong cách widget mới từ tí hon đến khổng lồ, phù hợp với mọi màn
-            hình.</li>
-        <li><b>Widget Đĩa nhạc (2x2):</b> Thiết kế đĩa nhạc mini tinh tế với vòng tiến trình rực rỡ và nút điều khiển
-            ngay trên mặt đĩa.</li>
-        <li><b>Widget Jumbo (4x4):</b> Trải nghiệm âm nhạc toàn màn hình với ảnh bìa sống động và đầy đủ thông tin chi
-            tiết.</li>
-        <li><b>Vòng tiến trình thông minh:</b> Theo dõi thời gian bài hát ngay quanh ảnh đại diện với hiệu ứng vòng tròn
-            Cyan cao cấp.</li>
+        <li><b>Màu sắc Widget sống động:</b> Nền widget giờ đây tự động thay đổi màu sắc rực rỡ dựa trên ảnh bìa bài hát
+            bạn đang nghe.</li>
+        <li><b>Hiệu ứng Cầu vồng:</b> Khi chưa có ảnh bìa, widget sẽ hiển thị hiệu ứng chuyển màu cầu vồng ngẫu nhiên
+            cực kỳ bắt mắt.</li>
+        <li><b>Ghi nhớ trạng thái:</b> Widget giờ đây luôn hiển thị đúng thông tin bài hát ngay cả khi bạn khởi động lại
+            máy hoặc thêm widget mới.</li>
     </ul>
 
     <h3>🐛 Sửa lỗi</h3>
     <ul>
-        <li>Khắc phục triệt để lỗi widget bị trắng hoặc không hiển thị trên các dòng máy Android đời mới.</li>
-        <li>Sửa lỗi đồng bộ thông tin bài hát giữa ứng dụng và widget.</li>
+        <li>Khắc phục triệt để lỗi widget bị đơ hoặc không phản hồi sau một thời gian sử dụng.</li>
+        <li>Sửa lỗi tràn khung hình và vòng tiến trình trên một số kích thước widget đặc biệt.</li>
     </ul>
 
     <h3>⚡ Cải thiện hiệu suất</h3>
     <ul>
-        <li>Tối ưu hóa việc tải ảnh bìa giúp widget hoạt động mượt mà hơn và không gây tốn pin.</li>
-        <li>Tăng tốc độ phản hồi khi nhấn các nút điều khiển trên màn hình chính.</li>
+        <li>Tối ưu hóa bộ nhớ đệm giúp widget hoạt động cực kỳ mượt mà, tiết kiệm pin và tài nguyên hệ thống.</li>
     </ul>
 
     <div class="footer">
